[metadata]
name = earthing
version = 1.0.0
author = Manu Varkey
author_email = manuvarkey@gmail.com
description = A python library for design of earthing networks in electrical substations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/manuvarkey/Earthing
project_urls =
    Bug Tracker = https://github.com/manuvarkey/Earthing/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
keywords = earthing, grounding, electrical

[options]
packages = earthing
python_requires = >=3.6
install_requires =
    numpy >= 1.22.0
    matplotlib >= 3.5.0
